@@ -5,6 +5,7 @@
         * IB/qib: Change driver default for wc_pat to 2 for cross CPU inconsistencies
         * IB/qib: fix DMA_nnBIT_MASK warnings
         * IB/qib: include slab.h as necessary for newer kernels
+        * IB/qib: optimize pio ack buffer allocation
 2011-02-14 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
         * Tag 1.5.3-10
         * IB/qib: Hold links until tuning data is available
